--- a/index.html
+++ b/index.html
@@ -2,13 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Image Gallery</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My Image Gallery</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>My Image Gallery</h1>
-  <div class="gallery" id="gallery"></div>
+
+  <header>
+    <h1>My Photo Album</h1>
+    <p>Welcome to my gallery</p>
+  </header>
+
+  <div class="gallery" id="gallery">
+    <!-- Images will be inserted here by JavaScript -->
+  </div>
+
+  <footer>
+    &copy; 2025 Your Name. All rights reserved.
+  </footer>
 
   <script src="script.js"></script>
 </body>
