--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Image Gallery</title>
+  <title>My Gallery</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,10 +16,6 @@
   <div class="gallery" id="gallery">
     <!-- Images will be inserted here by JavaScript -->
   </div>
-
-  <footer>
-    &copy; 2025 Your Name. All rights reserved.
-  </footer>
 
   <script src="script.js"></script>
 </body>
