--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1 class="title">JavaScript Image Gallery</h1>
+  <h1 class="title">My Album</h1>
   <div class="gallery" id="gallery"></div>
 
   <!-- Modal -->
